US7225 - 13.4 - 07/17/2013 Clearcase Merge - Discover-Launch Project

--- a/Discover-Launch/assets/www/card/html/common/pageError.html
+++ b/Discover-Launch/assets/www/card/html/common/pageError.html
@@ -16,15 +16,18 @@
 		<div data-role="content" class="ui-content-internalpages">
          <div class="wraper">
 			<span class="errormsg2" id="pageError_errorMessage"></span>
-		</div>
-			<div id="footnotes" class="footnotes" ></div>
-		</div>
+		 </div>
+		 </div>
+		<div class="dropDownLayer"></div>        
+		<div id="footnotes" class="footnotes"></div>
+		
 		<!-- content end -->
-		<div data-role="footer" id="pg-footer" data-position="fixed"  data-id="myfooter">
-            <footer id="footer" class="mnu_footer">
-			</footer>
-		</div>
+		<!--<div data-role="footer" data-position="fixed" id="pg-footer"
+			data-id="myfooter">
+			<footer id="footer" class="mnu_footer"> </footer>
+		</div>-->
 	</div>
 	<!--page end -->
+	
 </body>
 </html>
