--- a/Discover-Launch/assets/www/card/html/rewards/bankAccountForDirectDeposit.html
+++ b/Discover-Launch/assets/www/card/html/rewards/bankAccountForDirectDeposit.html
@@ -24,7 +24,7 @@
 					<p>					
 					<div class="txtcenteraln" style="width:100%">
 						<a href="#"
-							onclick="navigation('../custormerService/customerServiceUpdateAccount')"
+							onclick="navigation('../payments/manageBankAccounts');"
 							data-role="button" data-theme="c">Add Bank Account</a>
 					</div>
 					</p>
