--- a/Discover-Launch/assets/www/index.html
+++ b/Discover-Launch/assets/www/index.html
@@ -119,6 +119,10 @@
     <script type="text/javascript" src="card/scripts/pushTermsAndConditions.js"></script>
     <script type="text/javascript" src="card/scripts/pushManageAlerts.js"></script>
     <script type="text/javascript" src="card/scripts/pushAlertHistory.js"></script>
+	<script type="text/javascript" src="card/scripts/R13.4.js"></script>
+	<script type="text/javascript" src="card/msdropdown/jquery.dd.min.js"></script>
+	<script type="text/javascript" src="card/scripts/common/discoverNetwork.js"></script>
+	<script type="text/javascript" src="card/scripts/manageBankAccounts.js"></script>    
     <script>
         if (window.location.host.match(/local.discovercard.com/) || window.location.host.match(/localhost.discovercard.com/)){
             document.write('<script type="text/javascript" src="card/scripts/common-bypass-native.js"><\/script> ');
@@ -151,6 +155,8 @@
     <link rel="stylesheet" href="css/jquery.iviewer.css" />
     <link rel="stylesheet" href="card/css/passbook.css" />
     <link rel="stylesheet" href="card/css/edo-R13.css"/>
+	<link rel="stylesheet" href="card/css/R13.4.css"/>		
+	<link rel="stylesheet" href="card/msdropdown/dd.css" />
    
     <script>
         if (window.location.host.match(/local.discovercard.com/) || window.location.host.match(/localhost.discovercard.com/)){
