--- a/Discover-Launch/assets/www/card/html/payments/lateMinPayWarnNoMinPay.html
+++ b/Discover-Launch/assets/www/card/html/payments/lateMinPayWarnNoMinPay.html
@@ -14,6 +14,9 @@
 		<!-- content start -->
 		<div data-role="content" class="ui-content-internalpages">
 			<div class="wraper">
+				<h1>Late Payment warning </h1>
+				<p class="paymntDueDate">Payment Due Date:</p>
+				<p id="latePayWarnPayDueDate">07/20/2013</p>
 				<!-- h1>Late Payment warning </h1 -->
 				<h2>Late Payment warning</h2>
 				<p id="latePayWarnText">If we do not receive your minimum payment by the date listed above, you may have to pay a late fee of up to $<span id="noMinPaylateFeeWarningAmount">35.00</span> and your purchase and balance transfer APRs for new transaction may be increased up to the Penalty APR of <span id="noMinPaylatePayAprRate">14.99</span>% variable. 
