US7225 - 13.4 - 07/19/2013 Clearcase Merge - Discover-Launch Project

--- a/Discover-Launch/assets/www/card/html/edo/edoDetail.html
+++ b/Discover-Launch/assets/www/card/html/edo/edoDetail.html
@@ -33,7 +33,7 @@
 						<span id="edoDetailTerm" class='edoDetailInformation'></span>   
 						<!--<span class="edoDetailInformation1">Discover<sup>&reg;</sup> card must be used for payment.</span>-->
                           <span class="edoDetailInformation">Purchases made using Near Field Communication (NFC), virtual wallets, or similar technology may not be eligible. Please allow up to 14 days for a statement credit to be applied to your account. </span>
-                        <span class="edoDetailInformation">By selecting view map, you hereby agree that Discover<sup>&reg;</sup> may access and use your location information.</span>
+                        <span class="edoDetailInformation viewMapText">By selecting view map, you hereby agree that Discover<sup>&reg;</sup> may access and use your location information.</span>
                     </div>
 					
                     <div class="textcenter">
