--- a/Discover-Launch/assets/www/card/html/edo/edoLandingPage.html
+++ b/Discover-Launch/assets/www/card/html/edo/edoLandingPage.html
@@ -29,7 +29,7 @@
                         </div>
                     </div>
                 </div -->
-				<div class="faqWraper"><div class="rd-faq-main"><img src="../../images/icon_faqs.png" class="icon_faqs"/></div></div>
+				<!--<div class="faqWraper"><div class="rd-faq-main"><img src="../../images/icon_faqs.png" class="icon_faqs"/></div></div> backlog changes -->
 				<!--div class="rd-landing-heading-text"><h1>EXTRAS</h1></div -->
                 
                 <div id="exclusiveEDOOffer"></div>
@@ -77,7 +77,7 @@
 		</div>
 		
     <!--tooltip-->
-    <div class="tooltip">
+    <!--div class="tooltip">
     	<span class="arrow_head"></span>
         <div class="bubble_data">
           <div class="cls_all_parent"></div>
@@ -91,7 +91,7 @@
              </div>
           </div>
         </div>
-    </div>
+    </div>  backlog changes -->
    <div class="overlay"></div>
    <div id="overlay_wraper" class="overlay_wraper">
             	<div class="overlay-header">
