--- a/Discover-Launch/assets/www/card/html/p2p/sendMoney1.html
+++ b/Discover-Launch/assets/www/card/html/p2p/sendMoney1.html
@@ -111,7 +111,7 @@
 						<div id="gri1">
 							<div id="grid11">
 								<div class="margintop10px">
-									<label><b>Transaction Type:</b></label>
+									<label><b>Title</b></label>
 								</div>
 								<div id="div12">
 									<div class="ui-select">
