--- a/Discover-Launch/assets/www/card/html/payments/paymentStep1.html
+++ b/Discover-Launch/assets/www/card/html/payments/paymentStep1.html
@@ -26,14 +26,15 @@
                     
                     <!--<h1>Make a Payment:</h1>-->
 					<!-- h2 style="margin-bottom:0px">Step 1 of 3</h2 -->
-					<div class="errorText hidden" id="errorDivForMAP1_HA">
+					<!--div class="errorText hidden" id="errorDivForMAP1_HA">
 						<span class="alertImage"></span>
 						<div class="errormsg2" id="ha_MakePaymentStepOne_Error"></div>
-					</div>
+					</div-->
 					
-					<div class="errorText hidden" id="errorDivForMAP1">
-						<span class="alertImage"></span>
+					<div class="errorText" id="errorDivForMAP1">
+						<span class="alertImage" style="display:none"></span>
 						<div>
+							<div class="errorText" id="ha_MakePaymentStepOne_Error"></div>
 							<div class="errorText" id="commonErrorInMakePaymentStepOneDiv"></div>
 							<div class="errormsg2" id="amounterror"></div>
 						</div>
