--- a/Discover-Launch/assets/www/card/html/payments/paymentsSummary.html
+++ b/Discover-Launch/assets/www/card/html/payments/paymentsSummary.html
@@ -21,6 +21,12 @@
                     <li><a href="#" onclick="navigation('../payments/pendingPayments');" >Pending</a></li>
 				</ul>            
             <div class="clearboth"></div>
+            	<div class="errorText1 hidden" id="paySummary_HAMode_Div">
+                    	<span class="alertImage"></span>
+                        <div>
+                            <p>Only one payment can be made per bank account per posting date.</p>
+                        </div>
+                 </div>
 				<span class="errormsg2 marginbottom10px" id="paymentsSummary_Inline_Error"></span>
 				<span class="errormsg2" id="errorPaymentsSummaryDiv"></span>
 				<ul class="whitebg-list-view">
