--- a/Discover-Launch/assets/www/card/html/pushNotification/alertHistory.html
+++ b/Discover-Launch/assets/www/card/html/pushNotification/alertHistory.html
@@ -41,7 +41,7 @@
                     <div id="alerthistory">
                         <ul class="whitebg-list-view" id="comments-list"></ul>
                     </div>
-                    <div class="main_heading_paragraph">Alerts over 45 days will be automatically deleted.
+                    <div class="main_heading_paragraph">Alerts over 45 days old will be automatically deleted.
                 	<span id="specialNotes">Dates are displayed in ET.</span> 
                 	</div>
                     <!-- Edit / Cancel / Delete Link Buttons -->
