--- a/Discover-Launch/assets/www/card/html/referAFriend/referAFriendDollar.html
+++ b/Discover-Launch/assets/www/card/html/referAFriend/referAFriendDollar.html
@@ -26,13 +26,13 @@
 				  <!-- img src="../../images/icon_faqs.png" class="icon_faqs" width="32" height="33"/ -->
 				  <!-- h1>Refer A Friend</a></h1 -->
 				  
-				<div class="faqWraper">
+				<!--<div class="faqWraper">
 					<div class="rd-faq-main">
 						<a href="#" onclick="navigation('../rewards/redeemFaqs');" data-transition="slide">
 							<img src="../../images/icon_faqs.png" class="icon_faqs"/>
 						</a>
 					</div>
-				</div>
+				</div> backlog changes -->
 				<h1>Discover Refer A Friend. Everyone Wins!</h1>   
                   <p class="text-below-orange-text">The easiest way for you and a friend to get $50 <em>Cashback Bonus</em>.</p>
                   <div class="clearboth"></div>
