--- a/Discover-Launch/assets/www/card/html/referAFriend/referAFriendMiles.html
+++ b/Discover-Launch/assets/www/card/html/referAFriend/referAFriendMiles.html
@@ -20,13 +20,13 @@
                         <!-- content start -->
                 <div data-role="content" class="ui-content-internalpages">
                      <div class="wraper">
-                          <div class="faqWraper">
+                          <!-- <div class="faqWraper">
 							<div class="rd-faq-main">
 								<a href="#" onclick="navigation('../rewards/redeemFaqs');">  
 									<img src="../../images/icon_faqs.png" class="icon_faqs" width="32" height="33"/>
 								</a>
 							</div>
-						   </div>
+						   </div> backlog changes  -->
 							<h1>Everyone wins when you Refer a Friend to Discover</h1>
                                         
                           <p class="text-below-orange-text">The easiest way for you and a friend to get 5,000 miles.</p>
