--- a/Discover-Launch/assets/www/card/html/rewards/redeemBadAccountStatusError.html
+++ b/Discover-Launch/assets/www/card/html/rewards/redeemBadAccountStatusError.html
@@ -37,7 +37,7 @@
     </div>
   </div>
 <!--Tooltip for FAQ-->
-	<div class="sd-faq-tooltip">
+	<!-- <div class="sd-faq-tooltip">
 	<div class="tooltip"><span class="arrow_head"></span>
               <div class="bubble_data">
                 <div class="cls_all_parent"></div>
@@ -52,13 +52,13 @@
                 </div>
               </div>
         </div>
-	</div>
+	</div> backlog changes -->
 	<!--Tooltip for FAQ Ends-->
       <!--Tooltip for Main Button-->
-  <div class="sd-tooltip">
+  <!-- <div class="sd-tooltip">
     <div class="tooltip1"><span class="arrow_head1"></span>
      <div id="rewards_summary" class="rewards_summary"></div>
-  </div>
+ </div> backlog changes -->
   <!--Tooltip for FAQ Ends--> 
   
   			<!--Help Overlay Details-->
