--- a/Discover-Launch/assets/www/card/html/rewards/redemptionLanding.html
+++ b/Discover-Launch/assets/www/card/html/rewards/redemptionLanding.html
@@ -73,7 +73,7 @@
   			</div>
                         
             
-            <div class="tooltip"><span class="arrow_head"></span>
+            <!-- <div class="tooltip"><span class="arrow_head"></span>
               <div class="bubble_data">
                 <div class="cls_all_parent"></div>
                 <div class="data_in_bubble">
@@ -86,7 +86,7 @@
                   </div>
                 </div>
               </div>
-            </div>
+            </div>  backlog changes -->
 			 <div class="overlay1"></div>
 		            <div id="overlay_wrape1" class="overlay_wraper1">
 		            	<div class="overlay-header1">		
