--- a/Discover-Launch/assets/www/card/html/rewards/redemption_History.html
+++ b/Discover-Launch/assets/www/card/html/rewards/redemption_History.html
@@ -46,7 +46,7 @@
 
       	</div>
 
-            <div class="tooltip"><span class="arrow_head"></span>
+            <!-- <div class="tooltip"><span class="arrow_head"></span>
               <div class="bubble_data">
                 <div class="cls_all_parent"></div>
                 <div class="data_in_bubble">
@@ -59,7 +59,7 @@
                   </div>
                 </div>
               </div>
-            </div>
+            </div> backlog changes -->
             <div class="overlay"></div>
             <div id="overlay_wraper" class="overlay_wraper">
             	<div class="overlay-header">
