US7225 - 13.4 code merge 7/24 - Launch Project

--- a/Discover-Launch/assets/www/card/html/payments/manageBankAccMaxAcctLimitMode.html
+++ b/Discover-Launch/assets/www/card/html/payments/manageBankAccMaxAcctLimitMode.html
@@ -17,7 +17,7 @@
 				 <h1><img src="../../images/alertImg.png" width="20" height="20" alt="Alert" /"> We're Sorry</h1>  
 				<p>You have reached the maximum number of bank accounts for online payments.</p>
 				<div class="txtcenteraln r3matchbtn">
-					<a href="#" onclick="navigation('../payments/manageBankAccounts');dfs.crd.sct.manageBankAccountBtn();" data-role="button" data-theme="c">Manage Payments</a>
+					<a href="#" onclick="navigation('../payments/manageBankAccounts');dfs.crd.sct.manageBankAccountBtn();" data-role="button" data-theme="c">Manage Bank Accounts</a>
 				</div>
 			</div>
 			
