--- a/Discover-Launch/assets/www/card/html/payments/paymentStep3.html
+++ b/Discover-Launch/assets/www/card/html/payments/paymentStep3.html
@@ -51,7 +51,7 @@
 
 				<div class="txtcenteraln margintop10px" id="makePaymentFreshCall">
 
-                    <a class="small-btn" href="#" onclick="navigation('paymentsSummary');" data-role="button">Payment Summary</a><br/>
+                    <a class="small-btn" href="#" onclick="navigation('paymentSaveToPhotos');" data-role="button">Save To Photos</a><br/>
                     
 				</div>
 				<div class="txtcenteraln margintop10px" id="makePaymentEditConfirmBtn">
