US7225 - 13.4 code merge 7/31 - Launch Project

--- a/Discover-Launch/assets/www/card/html/p2p/sendMoney2.html
+++ b/Discover-Launch/assets/www/card/html/p2p/sendMoney2.html
@@ -79,7 +79,7 @@
 							<div>
 								<label id="related_content1" class="floatleft"></label>
 							</div></li>
-						<li>
+						<li id="notesLi">
 							<div id="note">Note <label style="display:block" id="confirm_note">							
 							</label>
 							</div>
