--- a/Discover-Launch/assets/www/card/html/payments/paymentStep1.html
+++ b/Discover-Launch/assets/www/card/html/payments/paymentStep1.html
@@ -161,7 +161,7 @@
 				<!-- calender start -->
 				<div class="wraper2" style="display: none">
 					<h3 class="calenderH3">Select Payment Date</h3>
-					<div id="calendar"></div>
+					<div id="calendar" class="mapcalendar"></div>  <!--13.3 global change 29/07/13  -->
 					<div class="txtcenteraln">
 						<a href="#" class="bluelink normaltext boldtext cancelbtnarea"
 							id="calendar-cancel">Cancel</a>
