--- a/Discover-Launch/assets/www/card/html/payments/paymentStep2.html
+++ b/Discover-Launch/assets/www/card/html/payments/paymentStep2.html
@@ -46,7 +46,7 @@
 				</ul>
 				<div class="txtlftalgn bigboldBTN">
                     <p id="cuttOff_Note"></p>
-                    <a href="#" onclick="navigation('paymentInformation');">Important information about Online Payment</a>
+                    <a href="#" onclick="navigation('paymentInformation');">Important information about Online Payments</a>
                 </div>
 				<div  id="milesRedeem-button">
 					<div class="txtcenteraln r3matchbtn">
