--- a/Discover-Launch/assets/www/card/html/payments/paymentsSummary.html
+++ b/Discover-Launch/assets/www/card/html/payments/paymentsSummary.html
@@ -29,6 +29,7 @@
                  </div>
 				<span class="errormsg2 marginbottom10px" id="paymentsSummary_Inline_Error"></span>
 				<span class="errormsg2" id="errorPaymentsSummaryDiv"></span>
+                <div class='clearboth'></div> <!-- 26-07-13 TO fix 106467 -->
 				<ul class="whitebg-list-view">
 						<li><span>Current Balance</span><br/><span  id="paymentsSummary_currentBalance" class="amt_bold paymentsummaryval" ></span>
 						</li>
