--- a/Discover-Launch/assets/www/card/html/payments/pendingPayments.html
+++ b/Discover-Launch/assets/www/card/html/payments/pendingPayments.html
@@ -21,7 +21,7 @@
                     <li class="curnt"><a href="#" onclick="navigation('../payments/pendingPayments');" >Pending</a></li>
                 </ul>            
                      <div class="clearboth"></div>           
-            				 <span id = "errorPendingPaymentDiv"></span>
+            				 <span id = "errorPendingPaymentDiv" class="innerWrapper"></span>
 							 <div class="paymentMethodErrorMsg" style="color:red;"></div>
 							 <p><span id="editPaymentMsg"></span></p>
 
