--- a/Discover-Launch/assets/www/card/html/profile/personalizeCashPin1.html
+++ b/Discover-Launch/assets/www/card/html/profile/personalizeCashPin1.html
@@ -32,14 +32,14 @@
 						<label class="boldtext">Enter New PIN:</label>
                         <span class="wrapperSpanOther payDate">
                				 <input type="password"  name="enterPin" id="enterPin" class="textInput numberInput inputtext" value=""	maxlength="4"/>
-							 <img src="card/images/emptyTextBox.png" width='15' height='15' alt='empty' class='emptyText' />
+							 <img src="../../images/emptyTextBox.png" width='15' height='15' alt='empty' class='emptyText' />
                			 </span> 
                 	</div>	
 					<div class="col">
 						<label class="boldtext">RE-enter New PIN:</label>
                         <span class="wrapperSpanOther payDate">
                 			<input type="password"  name="confirmPin" id="confirmPin" class="textInput numberInput inputtext" value="" maxlength="4"/>
-							<img src="card/images/emptyTextBox.png" width='15' height='15' alt='empty' class='emptyText' />
+							<img src="../../images/emptyTextBox.png" width='15' height='15' alt='empty' class='emptyText' />
                 		</span> 
                		</div>
 				</div>
