--- a/Discover-Launch/assets/www/card/html/statements/searchTrans.html
+++ b/Discover-Launch/assets/www/card/html/statements/searchTrans.html
@@ -146,7 +146,8 @@
     </div>
     <div class="wraper js-calHideWrap" style="display: none">
       <h3 id="js-date-title">Select Date</h3>
-      <div id="calendar"></div>
+
+      <div id="calendar" class="searchtranscalendar"></div>      <!--13.3 global change 29/07/13  -->
       <div class="txtcenteraln r3matchbtn"></div>
       <div class="txtcenteraln"> <a href="#" class="bluelink normaltext boldtext cancelbtnarea ui-link" id="calendar-cancel">Cancel</a> </div>
     </div>
