US7225 - 13.4 code merge 8/5 - Launch Project

--- a/Discover-Launch/assets/www/card/html/payments/cancelPayment.html
+++ b/Discover-Launch/assets/www/card/html/payments/cancelPayment.html
@@ -19,8 +19,7 @@
 			<div class="wraper"> 
 				<!-- body text area star -->
 				<h1>Cancel Transaction</h1>
-				<p class="cancelQuest1"><strong>Are you sure you want to cancel this transaction?</strong></p>
-                <p>Are you sure you want to cancel this payment?</p>
+                <strong><p>Are you sure you want to cancel this payment?</p></strong>
 				<p>Tap "Yes, Cancel" to cancel this payment. Tap "No" to return to previous page.</p>
                 <div class="txtcenteraln r3matchbtn">
                 <a href="#" data-role="button" class="yesNo" onclick="navigation('confirmCancelPayment1');">Yes, Cancel</a><br/>
