--- a/Discover-Launch/assets/www/card/html/payments/paymentStep1.html
+++ b/Discover-Launch/assets/www/card/html/payments/paymentStep1.html
@@ -33,10 +33,10 @@
 					
 					<div class="errorText" id="errorDivForMAP1">
 						<span id="alertImageSpan"  style="display:none; float:left; width:25px; height:25px; margin-top:10px"></span>
-						<div style="float:left !important;width:80%;display:inline-block; padding-right:10px">
-							<div class="errorText" id="amounterror" style="display:none"></div>
-							<div class="errorText" id="ha_MakePaymentStepOne_Error" style="display:none"></div>
-							<div class="errorText" id="commonErrorInMakePaymentStepOneDiv" ></div>
+						<div style="float:left !important;width:80%;display:inline-block; padding-right:10px;margin-top:10px !important">
+							<div  id="amounterror" style="display:none"></div>
+							<div  id="ha_MakePaymentStepOne_Error" style="display:none"></div>
+							<div  id="commonErrorInMakePaymentStepOneDiv" ></div>
 						</div>
 					</div>	
 					
