--- a/Discover-Launch/assets/www/card/html/payments/paymentsHistory.html
+++ b/Discover-Launch/assets/www/card/html/payments/paymentsHistory.html
@@ -23,7 +23,7 @@
             <div class="clearboth"></div>
 
 				 <span id="paymentsHistory_paymentHistory"></span> 
-                <span id = "errorPaymentsHistoryDiv"></span>
+                <span id = "errorPaymentsHistoryDiv" class="innerWrapper"></span>
 	
 					<!--<ul class="transactionTable font12" data-role="listview" data-filter="false" data-filter-placeholder="Search these results">
 						<li class="">
