--- a/Discover-Launch/assets/www/card/html/profile/personalizeCashPin1.html
+++ b/Discover-Launch/assets/www/card/html/profile/personalizeCashPin1.html
@@ -23,7 +23,7 @@
 			<div class="wraper">
 				<!--<h1>Personalize Cash PIN:</h1>
 				<h2>Step 1 of 2</h2>-->
-				<p class="customPinText">Customize a secure PIN that you can use to make cash advances at participating ATMs worldwide.</p>
+				<p class="customPinText">Customize a secure Cash PIN that you can use to make cash advances at participating ATMs worldwide.</p>
 				<div id="errormsg" class="errormsg">
 						Sorry. Your new PIN and re-entered PIN must match.<br/>Please re-enter it again.  
 				</div>
