--- a/Discover-Launch/assets/www/card/html/strongAuth/strongAuthFirstQues.html
+++ b/Discover-Launch/assets/www/card/html/strongAuth/strongAuthFirstQues.html
@@ -27,7 +27,7 @@
 					</span>
                 </div>
 				<p class="boldtext"  style="font-size:12px; display:inline-block">Would you like us to remember this device?</p>
-				<ul class="collapsible">
+				<ul class="collapsible" style="display: none;">
 					<li>
 						<a href="#" class="collapslink deactive" rel="strongAuthFirstQues_WhatThis"><b>What's this?</b></a>
 						<p id="strongAuthFirstQues_WhatThis" style="display: none;">
