US7225 - 13.4 code merge 8/6 - Launch Project

--- a/Discover-Launch/assets/www/card/html/payments/manageBankAccEnterDetails.html
+++ b/Discover-Launch/assets/www/card/html/payments/manageBankAccEnterDetails.html
@@ -53,7 +53,7 @@
                      <li>
                     	<span class="detailName">Confirm Account #</span>
                         <span class="wrapperSpan">
-                         <input type="number"" class="textInput numberInput" maxlength="17" id="confirmAccountNumber" />
+                         <input type="number" class="textInput numberInput" maxlength="17" id="confirmAccountNumber" />
                          <img src='../../images/emptyTextBox.png' width='15' height='15' alt='empty' class='emptyText' />
                         </span>
                         <div class="clearboth"></div>
